thirdparty/optipng/optipng-0.7.6/src/zlib/configure.log
--------------------
./configure --static
Thu Jan 19 16:59:34 EST 2017
Checking for gcc...
=== ztest40705.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest40705.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest40705.c ===
int foo() { return 0; }
===
gcc -c -O3 ztest40705.c

Building static library libz.a version 1.2.8-optipng with gcc.

=== ztest40705.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -O3 -D_LARGEFILE64_SOURCE=1 ztest40705.c
ztest40705.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest40705.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -O3 -o ztest40705 ztest40705.c
Checking for fseeko... Yes.

=== ztest40705.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -O3 -o ztest40705 ztest40705.c
Checking for strerror... Yes.

=== ztest40705.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -O3 ztest40705.c
Checking for unistd.h... Yes.

=== ztest40705.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -O3 ztest40705.c
Checking for stdarg.h... Yes.

=== ztest40705.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -O3 ztest40705.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest40705.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -O3 -o ztest40705 ztest40705.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest40705.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -O3 ztest40705.c
Checking for return value of vsnprintf()... Yes.

=== ztest40705.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -O3 ztest40705.c
Checking for attribute(visibility) support... Yes.

ALL = static
AR = libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -O3 -DHAVE_HIDDEN
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3 -fPIC -DHAVE_HIDDEN
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic
VER = 1.2.8-optipng
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Darwin
--------------------


